# python_package_template

./: .editorconfig  .isort.cfg  Dockerfile  LICENSE  Makefile  docker-compose.interactive.yaml  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  local.env  pyproject.toml  setup.cfg
.github/workflows/: code_analysis.yml  codeql-analysis.yml  tests.yml
docs/: CONTRIBUTING.md  DEV_ENVIRONMENT.md  FILES_EXPLAINED.md  GIT_WORKFLOW.md  INDEX.md  README.md  TEAM.md  TICKETS.md
