[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=replaceme --cov-report term --cov-resport html"
testpaths = [
    "tests",
]

[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
mypy = "^0.902"
pre-commit = "^2.13.0"
isort = "^5.8.0"
